2002-05-18  Arseny Slobodjuck  <ampy@ich.dvo.ru>
	    Sam Steingold  <sds@gnu.org>

	graceful disconnect and interruptible wait in win32
	* stream.d (low_close_socket) [WIN32_NATIVE]: do not shutdown
	a socket: shutdown does not respect the linger option.
	To use shutdown for graceful disconnect, one should implement
	a kind of protocol, i.e. shutdown SEND and wait for client
	acknowledgment (client should support that protocol).
	(SOCKET-WAIT) [WIN32_NATIVE]: use interruptible_wait()
	(SOCKET-STREAM-SHUTDOWN): explicitly cast handle to stream
	* socket.d (lingerize_socket): new function: set SO_LINGER to 30sec
	(bindlisten_via_ip, connect_via_ip) [WIN32_NATIVE]: use it
	* spvw.d (main) [WIN32_NATIVE]: call done_win32() to finalize sockets
	* win32.d (done_win32, interruptible_wait): declare new functions
	* win32aux.d (done_win32): new function: finalizes socket library
	(do_wait): new thread function for DoInterruptible
	(interruptible_wait): new global function

2002-05-18  Sam Steingold  <sds@gnu.org>

	kill src/gettext; POs are now in src/po
	* Makefile.devel (SOURCES3, CONFIGURES, configures, potfiles):
	removed gettext/*
	(src--distrib): do create a PO tar
	* configure: removed gettext, replaced gettext/po with po
	* configure.in (ALL_LINGUAS, po/Makefile.in): moved here from
	gettext/configure.in
	* makemake.in: removed gettext, replaced gettext/po with po
	(ALL_LINGUAS): get it from src/configure.in

2002-05-17  Sam Steingold  <sds@gnu.org>

	fixed bug #[ 557155 ]: inspector :http broken Content-Length
	* inspect.lisp (with-http-output): convert the string to a vector
	with CONVERT-STRING-TO-BYTES and STREAM-EXTERNAL-FORMAT of the
	socket to reliably compute the `Content-length:' header;
	then write it with WRITE-BYTE-SEQUENCE (temporarily changing
	STREAM-ELEMENT-TYPE to binary)

2002-05-17  Bruno Haible  <bruno@clisp.org>

	* stdbool.h.in: Upgrade to gettext-0.11.3.
	* m4/stdbool.m4: Upgrade to gettext-0.11.3.